# Doctor-Web-test-task

./: README.md  pyproject.toml  pytest.ini
app/: main.py
app/domain/: database.py  use_cases.py
app/domain/use_cases/: base_command_handler.py  command_handler.py
app/infrastructure/: in_memory_db.py
app/interface/: console_ui.py
tests/: test_database.py  test_use_cases.py
