[tool.poetry]
name = "doctor-web-test-task"
version = "0.1.0"
description = ""
authors = ["anovikov <a.novikov@stacktelecom.ru>"]
readme = "README.md"
packages = [{include = "doctor_web_test_task"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
